# Income_divide_app_rust

./: Cargo.toml
src/: main.rs
ui/: appwindow.slint
