[package]
name = "incomeapp"
version = "0.1.0"
authors = ["lalkrishna-xpay <lalkrishna@xpayback.com>"]
edition = "2021"
build = "build.rs"
description="This app used to divide income"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.4"

[build-dependencies]
slint-build = "1.4"

[package.metadata.bundle]

name="IncomeApp"
identifier="io.github.lalukrish.project"